# wispr-alt

./: .gitignore  DEPLOY.md  TESTING.docx  TESTING.md
.github/workflows/: android.yml  build.yml
android/: .gitignore  KEYSTORE.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/app/agolos/: AuthClient.kt  AuthStore.kt  LoginActivity.kt  MainActivity.kt  OnboardingState.kt  OverlayController.kt  SetPasswordActivity.kt  StyleStore.kt  WisprAccessibilityService.kt  WisprService.kt  WisprTile.kt
android/app/src/main/java/com/wispralt/keyboard/: AuthClient.kt  AuthStore.kt  KeyboardService.kt  LoginActivity.kt  MainActivity.kt  OnboardingState.kt  OverlayController.kt  SetPasswordActivity.kt  StyleStore.kt  WisprAccessibilityService.kt  WisprService.kt  WisprTile.kt
android/app/src/main/res/drawable/: ic_agolos_a.xml  ic_belovik_b.xml  ic_launcher_foreground.xml  ic_status.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: colors.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  method.xml
app/: .env.production  index.html  overlay.html  vite.config.ts
app/src/: main.ts  overlay.css  overlay.ts  styles.css  tokens.css
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  inject.rs  keystore.rs  lib.rs  perms.rs  settings.rs
backend/: .dockerignore  .env.example  .gitignore  Caddyfile.snippet  Dockerfile  README.md  docker-compose.yml  fly.toml  index.ts  package.json
backend/src/: auth.ts  db.ts  email.ts  jwt.ts  markdownToPlain.ts  streamTranscribe.ts  transcribe.ts
brand/: BRAND.md
brand/logo/: extract-glyphs.py
design/: BRIEF-belovik.md  BRIEF.md
design/archive/: BRIEF-v1-belovik.md
ios/: .gitignore  AGOLOSKeyboard.entitlements  BelovikKeyboard.entitlements  README.md  project.yml
ios/Belovik.xcodeproj/: project.pbxproj
ios/Configs/: Debug.xcconfig  Release.xcconfig
ios/wispr-alt/: AgolosTokens.swift  App.swift  AudioRecorder.swift  AuthClient.swift  AuthStore.swift  Backend.swift  BelovikTokens.swift  DictateView.swift  Info.plist  Keychain.swift  LoginView.swift  OnboardingView.swift  SetPasswordView.swift  SharedStorage.swift  StyleStore.swift
ios/wispr-alt-keyboard/: AgolosMark.swift  BelovikMark.swift  Info.plist  KeyboardViewController.swift  SharedStorage.swift
