[package]
name = "app"
version = "0.2.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
arboard = "3.4"

# enigo is only needed for text injection on Windows; on macOS we use
# osascript/System Events which does not require this dependency.
[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"

# macOS-specific deps:
# - core-foundation for AXIsProcessTrustedWithOptions (Accessibility prompt)
# - objc2 for NSWindow setCollectionBehavior / setLevel (overlay-over-
#   fullscreen behaviour that Tauri doesn't expose directly)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"

