[package]
name = "app"
version = "2.0.0-5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
# Magic-link deep links (agolos://auth?token=…) — single-instance plugin
# routes the URL to the already-running app instead of spawning duplicates.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
# OS-native secret storage: macOS Keychain / Windows Credential Manager /
# Linux Secret Service. Holds the JWT so settings.json stays plaintext-
# friendly while credentials live behind the OS access-control prompt.
# `apple-native` and `windows-native` use built-in OS APIs (no DBus dep on
# Linux means we ship `sync-secret-service` there).
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
arboard = "3.4"

# enigo is only needed for text injection on Windows; on macOS we use
# osascript/System Events which does not require this dependency.
[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"

# macOS-specific deps:
# - core-foundation for AXIsProcessTrustedWithOptions (Accessibility prompt)
# - objc2 for NSWindow setCollectionBehavior / setLevel (overlay-over-
#   fullscreen behaviour that Tauri doesn't expose directly)
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"
objc2 = "0.6"

